fixed back button location and changed .push to .unshift in js for searchHistory

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -61,5 +61,5 @@ aside {
 }
 
 .back-button {
-  left: -100px;
+  left: 12px;
 }
